--- a/styles/dialog/HelpDialog.module.sass
+++ b/styles/dialog/HelpDialog.module.sass
@@ -13,8 +13,8 @@
   justify-content: center 
 
   .tile
-    width: 40px
-    aspect-ratio: 1
+    width: $tile-size-sm
+    height: $tile-size-sm
     display: flex
     justify-content: center
     align-items: center
