--- a/styles/dialog/SettingsDialog.module.sass
+++ b/styles/dialog/SettingsDialog.module.sass
@@ -22,8 +22,8 @@
     color: palette(text, secondary)
   
 .tile
-  aspect-ratio: 1
-  width: 50px
+  height: $tile-size
+  width: $tile-size
   display: flex
   justify-content: center
   align-items: center
